[package]
name = "exercise-4-to-async-or-not-async"
version = "0.1.0"
authors = ["Jeroen Jansen <jeroen.jansen@alten.nl>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "1.0.1"

embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev="acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = [
    "panic-handler",
    "defmt",
    "esp32"
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev="acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["esp32"]}
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev="acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["esp32"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev="acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["defmt", "unstable", "esp32"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev="acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["defmt-espflash", "esp32"] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
